--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -16,6 +16,13 @@
   align-items: center;
 }
 
+.pageTitle {
+  text-align: center;
+  font-size: 48px;
+  position: relative;
+  left: 13px;
+}
+
 .footer {
   width: 100%;
   height: 100px;
