--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: Poppins, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Poppins, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background-color: #000000;
   color: #ffffff;
 }
@@ -19,9 +19,31 @@ a {
 
 .cls-1 {
   /*fill:#fff;*/
-  fill:#231f20 !important;
-} 
-.cls-2{
+  fill: #231f20 !important;
+}
+.cls-2 {
   /*fill:#231f20;*/
   fill: #ffffff !important;
+}
+
+.flip-countdown {
+  margin-bottom: 48px !important;
+}
+
+.flip-countdown.size-medium .flip-countdown-piece {
+  min-width: 125px;
+}
+
+video {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.content {
+  position: fixed;
+  background: rgba(0, 0, 0, 0.5);
+  padding: 20px;
 }
